Fix top bar style and behaviour on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -316,7 +316,7 @@ a:hover, .link:hover, .link-s:hover, .link-l:hover, .topbar-right .profile a:hov
 
 .topbar-right .notifications a { position: relative; }
 
-.topbar-right .notifications i::after { content: ""; width: 8px; height: 8px; border-radius: 50%; background-color: #f58220; position: absolute; left: 52%; top: 10%; }
+.topbar-right .notifications i::after { content: ""; width: 8px; height: 8px; border-radius: 50%; background-color: #f58220; position: absolute; left: 52%; top: 15%; }
 
 .topbar-right .profile { -ms-flex-pack: distribute; justify-content: space-around; }
 
@@ -326,12 +326,35 @@ a:hover, .link:hover, .link-s:hover, .link-l:hover, .topbar-right .profile a:hov
 
 .topbar-right .exit { -ms-flex-pack: center; justify-content: center; }
 
-@media (max-width: 767px) { .topbar-right { -ms-flex-direction: column; flex-direction: column; width: 100%; margin-top: 61px; } }
+@media (max-width: 767px) { .topbar-right { -ms-flex-direction: column; flex-direction: column; width: 100%; } }
+
+@media (max-width: 767px) { .visible-lg { display: none; } }
 
 .section--sidebar { background: #000; height: calc(100vh - 61px); width: 188px; position: fixed; top: 61px; left: 0; }
 
-@media (max-width: 767px) { .section--sidebar { width: 100%; height: auto; display: none; }
-  .section--sidebar.show { display: block; position: relative; top: 0; } }
+@media (max-width: 767px) { .section--sidebar { width: 100%; display: none; overflow: auto; }
+  .section--sidebar::-webkit-scrollbar { display: none; }
+  .section--sidebar.show { display: block; } }
+
+.visible-sm { background-color: #000; }
+
+.visible-sm .topbar-right > div { height: 39px; color: #818181; }
+
+.visible-sm .topbar-right > div p, .visible-sm .topbar-right > div a, .visible-sm .topbar-right > div i { font-size: 14px; line-height: 41px; color: #818181; }
+
+.visible-sm .topbar-right > div a { padding-left: 16px; }
+
+.visible-sm .wallet { -ms-flex-pack: start; justify-content: flex-start; }
+
+.visible-sm .notifications { -ms-flex-pack: start; justify-content: flex-start; }
+
+.visible-sm .profile { -ms-flex-pack: start; justify-content: flex-start; }
+
+.visible-sm .profile i { padding-left: 16px; }
+
+.visible-sm .exit { -ms-flex-pack: start; justify-content: flex-start; }
+
+@media (min-width: 768px) { .visible-sm { display: none; } }
 
 .sidebar-menu { padding-bottom: 30px; border-bottom-width: 1px; border-bottom-style: solid; border-bottom-color: #333; }
 
@@ -362,7 +385,7 @@ a:hover, .link:hover, .link-s:hover, .link-l:hover, .topbar-right .profile a:hov
 /* Pages / Views */
 .section--general { padding-left: 188px; padding-top: 61px; overflow-x: hidden; background-color: #f5f5f2; }
 
-@media (max-width: 767px) { .section--general { padding-left: 0; padding-top: 0; } }
+@media (max-width: 767px) { .section--general { padding-left: 0; } }
 
 .page, .page-statistic, .page-links { margin-left: 18px; margin-bottom: 18px; margin-right: 18px; background-color: #fff; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
 
