--- a/sass/pages/_general.scss
+++ b/sass/pages/_general.scss
@@ -5,7 +5,6 @@
     background-color: #f5f5f2;
     @media (max-width: 767px) {
         padding-left: 0;
-        padding-top: 0;
     }
 }
 
